--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://Zertallian:password@localhost:5433/MlDb
+sqlalchemy.url = postgresql://Zertallian:password@mlPostgres:5432/MlDb
 
 
 [post_write_hooks]
